--- a/Weetit_webite/Styles/comparisonpage.css
+++ b/Weetit_webite/Styles/comparisonpage.css
@@ -1,60 +1,65 @@
 ﻿.contentwrapper .answerbox .comparisonbox
 {
-    margin:0px;
-    padding:0px;
-    width:700px;
-    overflow:hidden;
-    display:none;
+    margin: 0px;
+    padding: 0px;
+    width: 700px;
+    overflow: hidden;
+    display: none;
+    border-bottom: 1px dashed #DFDFDF;
+    padding-top:10px;
+    padding-bottom:10px;
 }
 
 .contentwrapper .answerbox .comparisonbox .predicate
 {
-    font-size:x-large;
-    margin:0px;
-    padding:0px;
-    width:100px;
-    float:left;
-    text-align:center;
+    width: 100px;
+    float: left;
+    text-align: center;
+    margin-bottom: 10px;
+    color: #898989;
+    font-size: 14px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .contentwrapper .answerbox .comparisonbox .tableheader
 {
-    font-size:x-large;
-    margin:0px;
-    padding:0px;
-    width:100px;
-    float:left;
-    text-align:center;
+    font-size: x-large;
+    margin: 0px;
+    padding: 0px;
+    width: 100px;
+    float: left;
+    text-align: center;
 }
 
 
 .contentwrapper .answerbox .comparisonbox .window
 {
-    margin:0px;
-    padding:0px;
-    overflow:hidden;
-    width:600px;
-    position:relative;
+    margin: 0px;
+    padding: 0px;
+    overflow: hidden;
+    width: 600px;
+    position: relative;
 }
 .contentwrapper .answerbox .comparisonbox .datarow
 {
-    margin:0px;
-    padding:0px;
-    position:relative;
+    margin: 0px;
+    padding: 0px;
+    position: relative;
 }
 
 .contentwrapper .answerbox .comparisonbox .datarow .datacell
 {
-    margin:0px;
-    padding:0px;
-    width:300px;
-    display:inline-block;
-    float:left;
-    text-align:center;
+    margin: 0px;
+    padding: 0px;
+    width: 300px;
+    display: inline-block;
+    float: left;
+    text-align: center;
 }
 
 .contentwrapper .answerbox .comparisonbox .datarow .datacell img
 {
-    max-height:100px;
-    max-width:100px;
+    max-height: 100px;
+    max-width: 100px;
 }
