--- a/Weetit_webite/Styles/comparisonpage.css
+++ b/Weetit_webite/Styles/comparisonpage.css
@@ -1,4 +1,27 @@
-﻿.contentwrapper .answerbox .comparisonbox
+﻿.GalleryButtons
+{
+   position:fixed;
+   top:50%;
+   height:100px; 
+   width:700px;
+}
+
+
+.GalleryButtons .leftbutton
+{
+    float:left;
+    position :relative ;
+    left:-50px;
+}
+
+.GalleryButtons .rightbutton
+{
+    float:right;
+     position :relative ;
+    right:-50px;
+}
+
+.contentwrapper .answerbox .comparisonbox
 {
     margin: 0px;
     width: 700px;
@@ -16,6 +39,24 @@
     width: 100px;
     float: left;
     text-align: center;
+}
+
+.tableheader .title 
+{
+    padding-top:5px;
+    padding-bottom:10px;
+    font-size:18px;
+    font-weight:bold
+}
+
+.tableheader img
+{
+padding:1px; 
+/*-webkit-border-radius: 5px;
+border-radius: 5px;*/
+margin-top:5px;
+-webkit-box-shadow: 0px 0px 1px 2px #9e9e9e;
+box-shadow: 0px 0px 1px 2px #9e9e9e;
 }
 
 .contentwrapper .answerbox .comparisonbox .predicate
@@ -38,6 +79,7 @@
     width: 600px;
     position: relative;
 }
+
 .contentwrapper .answerbox .comparisonbox .datarow
 {
     margin: 0px;
@@ -59,4 +101,5 @@
 {
     max-height: 100px;
     max-width: 100px;
+
 }
