--- a/Styles/default.css
+++ b/Styles/default.css
@@ -188,7 +188,7 @@ body
 
 .maincontainer .searcharea .addedEntitiesBox
 {
-    min-height: 10px;
+    min-height: 60px;
     padding: 10px;
     width: 500px;
     margin: auto;
@@ -197,6 +197,17 @@ body
     -webkit-border-radius: 8px;
     border-radius: 8px;
     display:none;
+    position:relative;
+}
+
+.maincontainer .searcharea .addedEntitiesBox .leftNum
+{
+  color: #969696;
+  font-size:10px;
+  position:absolute;
+  right:0px;
+  bottom:-8px;
+  padding:10px;
 }
 
 .maincontainer .searcharea .addedEntitiesBox .title
