tabs logic added , andd working , more and less added in the compare page

--- a/Styles/Defaultpage.css
+++ b/Styles/Defaultpage.css
@@ -1,4 +1,11 @@
-﻿ body 
+﻿ .expand
+ {
+     position:absolute;
+     top:5px;
+     left:5px;
+ }
+ 
+ body 
 {
     font-family:arial ,Sans-Serif;
     background-color:#F0F0F0;
