--- a/Styles/comparisonpage.css
+++ b/Styles/comparisonpage.css
@@ -110,11 +110,12 @@ box-shadow: 0px 0px 1px 2px #9e9e9e;
     display: inline-block;
     float: left;
     text-align: center;
+    position:relative;
+    
 }
 
 .contentwrapper .answerbox .comparisonbox .datarow .datacell img
 {
     max-height: 100px;
     max-width: 100px;
-
 }
