--- a/Styles/comparisonpage.css
+++ b/Styles/comparisonpage.css
@@ -76,14 +76,16 @@ box-shadow: 0px 0px 1px 2px #9e9e9e;
 
 .contentwrapper .answerbox .comparisonbox .predicate
 {
-    width: 100px;
+    width: 90px;
     float: left;
     text-align: center;
     margin-bottom: 10px;
     color: #898989;
     font-size: 14px;
-    padding-top: 10px;
+    padding-top: 5px;
     padding-bottom: 10px;
+    padding-left:10px;
+    position:relative;
 }
 
 .contentwrapper .answerbox .comparisonbox .window
@@ -119,3 +121,12 @@ box-shadow: 0px 0px 1px 2px #9e9e9e;
     max-height: 100px;
     max-width: 100px;
 }
+
+
+ .expand
+ {
+     position:absolute;
+     left:0px;
+     top:0px;
+    
+ }
