--- a/Styles/RelatePage.css
+++ b/Styles/RelatePage.css
@@ -16,7 +16,7 @@ color 2 : #
 
 .title:hover
 {
-text-decoration:underline;
+    text-decoration: underline;
 }
 
 .subtitle
@@ -28,71 +28,84 @@ text-decoration:underline;
 
 .contentwrapper .answerbox .relateTable
 {
- margin:auto;   
- border:collapse;
- margin:auto;
- margin-bottom:20px;
+    margin: auto;
+    border: collapse;
+    margin: auto;
+    margin-bottom: 20px;
 }
 
 .contentwrapper .answerbox .relateTable .imgcontainer
 {
-    /*height:70px;
-    width:70px; */
-    margin:auto;
+    /*height:70px;     width:70px; */
+    margin: auto;
     -webkit-box-shadow: 0px 0px 1px 1px #adadad;
     box-shadow: 0px 0px 1px 1px #adadad;
-    background-color:#F3F3F3;
-    padding:3px;
-    margin:10px;
+    background-color: #F3F3F3;
+    padding: 3px;
+    margin: 10px;
 }
 
 .contentwrapper .answerbox .relateTable img
 {
     /*max-width: 70px;*/
-
-    max-height:70px;
+    max-height: 70px;
     margin: 0 auto;
 }
 
 .contentwrapper .answerbox .relateTable td
 {
-text-align:center;
-max-width:200px;
-margin-bottom: 10px;
+    text-align: center;
+    max-width: 200px;
+    margin-bottom: 10px;
 }
 
 .contentwrapper .answerbox .relateTable td a
 {
     color: #939393;
-    text-decoration:none;
+    text-decoration: none;
     font-size: 12px;
 }
 .contentwrapper .answerbox .relateTable td a:hover
 {
-    text-decoration:underline;
+    text-decoration: underline;
+}
+
+.answerbox .RelationDiagram .canvascontainer
+{
+    position: relative;
+}
+
+.answerbox .RelationDiagram .playButton
+{
+    background-image: url('../img/pauseIcon.png');
+    position: absolute;
+    bottom: 10px;
+    right: 0px;
+    
+    width: 48px;
+    height: 48px;
+    background-repeat: no-repeat;
+    display: block;
+    opacity:0.6;
+}
+.answerbox .RelationDiagram .loading
+{
+    position: absolute;
+    bottom: 25px;
+    right: 60px;
 }
 
 
 #viewport
 {
- -webkit-box-shadow: 0px 0px 1px 1px #adadad;
+    -webkit-box-shadow: 0px 0px 1px 1px #adadad;
     box-shadow: 0px 0px 1px 1px #adadad;
-    background-color:#F3F3F3;
-    padding:3px;
-    margin:10px;   
+    background-color: #F3F3F3;
+    padding: 3px;
+    margin: 10px;
 }
 
 .playandpause
 {
-    background-color:Black;
-}
-    
-.playButton
-{
-    background-image: url('../img/add.png');
-
-    width:47px;
-    height:51px;
-    background-repeat: no-repeat;
-    display:block;
+    background-color: Black;
 }
