--- a/Styles/comparisonpage.css
+++ b/Styles/comparisonpage.css
@@ -120,6 +120,7 @@ box-shadow: 0px 0px 1px 2px #9e9e9e;
     float: left;
     text-align: center;
     position:relative;
+    overflow:hidden;
     
 }
 
